# practitioner-seo

./: LICENSE  README.md
docs/: API_KEYS.md  CUSTOMIZATION.md  GSC_SETUP.md  SETUP.md  TROUBLESHOOTING.md
examples/: example-forbidden.md  example-formatting-rules.md  example-site-config.md  example-site-context.md  example-voice-guide.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/practitioner_seo/: __init__.py  config.py  server.py
mcp-server/src/practitioner_seo/auth/: __init__.py  oauth.py  service_account.py
mcp-server/src/practitioner_seo/tools/: __init__.py  content_brief.py  fetch_page.py  gsc_data.py  keyword_rankings.py  pagespeed.py  pillar_research.py  scrape_url.py  serp.py
mcp-server/tests/: conftest.py  test_fetch_page.py  test_gsc.py  test_scrape_url.py  test_serp.py
skills/: ONBOARDING.md  OPTIMIZER_PROTOCOL.md  SEO_METHODOLOGY.md  SKILL_DESCRIPTIONS.md  STRATEGIST_PROTOCOL.md  WRITER_PROTOCOL.md
templates/: FORBIDDEN_TEMPLATE.md  FORMATTING_RULES_TEMPLATE.md  SITE_CONFIG_TEMPLATE.md  SITE_CONTEXT_TEMPLATE.md  VOICE_GUIDE_TEMPLATE.md
